--- a/demo/package.json
+++ b/demo/package.json
@@ -12,13 +12,14 @@
   "license": "SEE LICENSE IN <your-license-filename>",
   "repository": "<fill-your-repository-here>",
   "dependencies": {
+    "nativescript": "^5.4.2",
     "nativescript-cryptography": "file:../src",
-    "nativescript-theme-core": "~1.0.4",
-    "tns-core-modules": "~5.4.0"
+    "nativescript-theme-core": "~1.0.6",
+    "tns-core-modules": "~5.4.3"
   },
   "devDependencies": {
     "nativescript-dev-typescript": "~0.10.0",
-    "nativescript-dev-webpack": "~0.24.0"
+    "nativescript-dev-webpack": "~0.24.1"
   },
   "gitHead": "8ab7726d1ee9991706069c1359c552e67ee0d1a4",
   "readme": "NativeScript Application"
