--- a/src/package.json
+++ b/src/package.json
@@ -1,59 +1,61 @@
 {
-	"name": "nativescript-cryptography",
-	"version": "1.0.0",
-	"description": "NativeScript Cryptography plugin.",
-	"main": "cryptography",
-	"typings": "index.d.ts",
-	"nativescript": {
-		"platforms": {
-			"android": "5.4.0",
-			"ios": "5.4.0"
-		}
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/karo-dc/nativescript-cryptography.git"
-	},
-	"scripts": {
-		"tsc": "npm i && tsc",
-		"build": "npm run tsc && npm run build.native",
-		"build.native": "node scripts/build-native.js",
-		"postclone": "npm i && node scripts/postclone.js",
-		"tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
-		"plugin.tscwatch": "npm run tsc -- -w",
-		"ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**' --exclude '**/platforms/**'",
-		"prepack": "npm run build.native",
-		"demo.ios": "npm run tsc && cd ../demo && tns run ios --emulator",
-		"demo.android": "npm run tsc && cd ../demo && tns run android --emulator",
-		"demo.reset": "cd ../demo && npx rimraf -- hooks node_modules platforms package-lock.json",
-		"plugin.prepare": "npm run build && cd ../demo && tns plugin remove nativescript-cryptography && tns plugin add ../src",
-		"clean": "npm run demo.reset && npx rimraf -- node_modules package-lock.json && npm i"
-	},
-	"keywords": [
-		"NativeScript",
-		"JavaScript",
-		"Android",
-		"iOS"
-	],
-	"author": {
-		"name": "Your Name",
-		"email": "youremail@yourdomain.com"
-	},
-	"bugs": {
-		"url": "https://github.com/karo-dc/nativescript-cryptography/issues"
-	},
-	"license": "Apache-2.0",
-	"homepage": "https://github.com/karo-dc/nativescript-cryptography",
-	"readmeFilename": "README.md",
-	"devDependencies": {
-		"tns-core-modules": "^5.4.2",
-		"tns-platform-declarations": "^5.4.2",
-		"typescript": "~3.5.2",
-		"prompt": "^1.0.0",
-		"rimraf": "^2.6.3",
-		"tslint": "^5.17.0",
-		"semver": "^6.1.1"
-	},
-	"dependencies": {},
-	"bootstrapper": "nativescript-plugin-seed"
+  "name": "nativescript-cryptography",
+  "version": "1.0.0",
+  "description": "NativeScript Cryptography plugin.",
+  "main": "cryptography",
+  "typings": "index.d.ts",
+  "nativescript": {
+    "platforms": {
+      "android": "5.4.0",
+      "ios": "5.4.0"
+    }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/karo-dc/nativescript-cryptography.git"
+  },
+  "scripts": {
+    "tsc": "npm i && tsc",
+    "build": "npm run tsc && npm run build.native",
+    "build.native": "node scripts/build-native.js",
+    "postclone": "npm i && node scripts/postclone.js",
+    "tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
+    "plugin.tscwatch": "npm run tsc -- -w",
+    "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**' --exclude '**/platforms/**'",
+    "prepack": "npm run build.native",
+    "demo.ios": "npm run tsc && cd ../demo && tns run ios --emulator",
+    "demo.android": "npm run tsc && cd ../demo && tns run android --emulator",
+    "demo.reset": "cd ../demo && npx rimraf -- hooks node_modules platforms package-lock.json",
+    "plugin.prepare": "npm run build && cd ../demo && tns plugin remove nativescript-cryptography && tns plugin add ../src",
+    "clean": "npm run demo.reset && npx rimraf -- node_modules package-lock.json && npm i"
+  },
+  "keywords": [
+    "NativeScript",
+    "JavaScript",
+    "Android",
+    "iOS"
+  ],
+  "author": {
+    "name": "Your Name",
+    "email": "youremail@yourdomain.com"
+  },
+  "bugs": {
+    "url": "https://github.com/karo-dc/nativescript-cryptography/issues"
+  },
+  "license": "Apache-2.0",
+  "homepage": "https://github.com/karo-dc/nativescript-cryptography",
+  "readmeFilename": "README.md",
+  "devDependencies": {
+    "tns-core-modules": "^5.4.2",
+    "tns-platform-declarations": "^5.4.2",
+    "typescript": "~3.5.2",
+    "prompt": "^1.0.0",
+    "rimraf": "^2.6.3",
+    "tslint": "^5.17.0",
+    "semver": "^6.1.1"
+  },
+  "dependencies": {
+    "nativescript": "^5.4.2"
+  },
+  "bootstrapper": "nativescript-plugin-seed"
 }
