--- a/src/platforms/android/include.gradle
+++ b/src/platforms/android/include.gradle
@@ -1,11 +1,9 @@
 /* Include.gradle configuration: http://docs.nativescript.org/plugins/plugins#includegradle-specification */
 
 android {
-	
+
 }
 
 dependencies {
-    // Describe plugin native Android dependencies like
-	// implementation "groupName:pluginName:ver" 
-    // EXAMPLE: implementation "com.facebook.fresco:fresco:0.9.0+"
+  implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.62'
 }
