--- a/src/package.json
+++ b/src/package.json
@@ -54,8 +54,6 @@
     "tslint": "^5.17.0",
     "semver": "^6.1.1"
   },
-  "dependencies": {
-    "nativescript": "^5.4.2"
-  },
+  "dependencies": {},
   "bootstrapper": "nativescript-plugin-seed"
 }
