fix: readme updated

--- a/src/package.json
+++ b/src/package.json
@@ -36,8 +36,8 @@
     "iOS"
   ],
   "author": {
-    "name": "Your Name",
-    "email": "youremail@yourdomain.com"
+    "name": "Karo Ghazaryan",
+    "email": "karo.ghazarian@gmail.com"
   },
   "bugs": {
     "url": "https://github.com/karo-dc/nativescript-cryptography/issues"
